WEB/src/components/Header/styles.css
.App-logo {
    height: 52px;
    width: 150px;
    float: left;
    cursor: pointer;
}

.App-header-container {
    font-family: "Times New Roman", Times, serif;
    background-color: rgb(255, 248, 41);
    align-items: center;
    justify-content: space-between;

}

.App-header-container-center {
    font-family: "Times New Roman", Times, serif;
    background-color: rgb(255, 248, 41);
    align-items: center;
    justify-content: center;

}

.App-header-container-right {
    justify-content: flex-end;

}
.App-button {

}


.App-title {
    margin: 5px;
    color: rgb(21, 38, 32);
    font-size: 2em;
    padding-right: 500px;
}

.App-header .btn {
    float: inherit;
    margin: 5px;
    padding-right: 3em;
    color: rgb(21, 38, 32);
}

